--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
-  flutter_bloc: ^6.1.1
-  http: ^0.12.0+2 
+  flutter_bloc: 6.1.1
+  http: 0.12.0+2 
 
 dev_dependencies:
   flutter_test:
