--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mask_text_input_formatter: 1.2.1
 
   cupertino_icons: ^0.1.3
   flutter_bloc: 6.1.1
