--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: FlutterBloc
+name: flutter_bloc_zipcode_br
 description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   mask_text_input_formatter: 1.2.1
 
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^0.1.3  
   flutter_bloc: 6.1.1
   http: 0.12.0+2 
 
@@ -22,3 +22,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/not_found.jpg
