--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^0.1.3  
   flutter_bloc: 6.1.1
   http: 0.12.0+2 
+  get_it: 7.2.0
 
 dev_dependencies:
   flutter_test:
